--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "node-sass": "^4.13.0",
     "proxy": "http://127.0.0.1:8000/",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
